samples/_failures_safe/1761408510_53548c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01d006a1.c: In function ‘main’:
./samples/SAFE/__tmp_01d006a1.c:177: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_01d006a1.c:176:5: error: expected declaration or statement at end of input
  176 |     while
      |     ^~~~~
